<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.3">
  <POU Name="f_GetNTCMaxR" Id="{38e082a5-c5d1-4ff1-ad13-a3868be5790d}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION f_GetNTCMaxR : real
VAR_INPUT
	rTemp: REAL;
	nProd: UINT;
	rNTCDev: REAL;
END_VAR
VAR
	nI: INT;
	rT0, rT1, rR0, rR1, rM: REAL;
END_VAR
VAR CONSTANT
	rCorr: REAL := 1.1;
	NTC_Sensing_MaxRT: ARRAY[0..1, 0..25] OF REAL := 
	[15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40,
	16360.3, 15616.5, 14910.6, 14240.7, 13604.6, 13000.3, 12426.2, 11880.7, 11362.1, 10869, 10400, 9962.4, 9545.6, 9148.5, 8770.1, 8409.4, 8065.4, 7737.3, 7424.4, 7125.7, 6840.7, 6568.5, 6308.7, 6060.4, 5823.3, 5596.6];
	NTC_GE_MaxRT: ARRAY[0..1, 0..23] OF REAL := 
	[15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 38, 40,
	16214, 15476, 14776, 14111, 13480, 12880, 12311, 11770, 11255, 10766, 10300, 9868.9, 9454.9, 9060.5, 8684.8, 8326.6, 7985.2, 7659.7, 7349.1, 7052.8, 6770.1, 6500.2, 5996.4, 5536.7];
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[nI:=1;
(*IF nProd=0 THEN
	WHILE (rCorr*GVL.NTC_Sensing_NomRT[0,nI]<rTemp) AND (nI<25) DO
		nI:=nI+1;
	END_WHILE
	rT0:=NTC_Sensing_MaxRT[0,nI-1];
	rT1:=NTC_Sensing_MaxRT[0,nI];
	rR0:=NTC_Sensing_MaxRT[1,nI-1];
	rR1:=NTC_Sensing_MaxRT[1,nI];
	rM:=(rR1-rR0)/(rT1-rT0);
	f_GetNTCMaxR:=rR0+rM*(rTemp-rT0);
ELSE
	WHILE (NTC_GE_MaxRT[0,nI]<rTemp) AND (nI<23) DO
		nI:=nI+1;
	END_WHILE
	rT0:=NTC_GE_MaxRT[0,nI-1];
	rT1:=NTC_GE_MaxRT[0,nI];
	rR0:=NTC_GE_MaxRT[1,nI-1];
	rR1:=NTC_GE_MaxRT[1,nI];
	rM:=(rR1-rR0)/(rT1-rT0);
	f_GetNTCMaxR:=rR0+rM*(rTemp-rT0);
END_IF*)
WHILE (GVL.NTC_Sensing_NomRT[0,nI]<rTemp) AND (nI<25) DO
	nI:=nI+1;
END_WHILE
rT0:=GVL.NTC_Sensing_NomRT[0,nI-1];
rT1:=GVL.NTC_Sensing_NomRT[0,nI];
rR0:=GVL.NTC_Sensing_NomRT[1,nI-1];
rR1:=GVL.NTC_Sensing_NomRT[1,nI];
rM:=(rR1-rR0)/(rT1-rT0);
// f_GetNTCMaxR:=(1+GVL.rNTCDev/100)*(rR0+rM*(rTemp-rT0));
f_GetNTCMaxR:=(1+rNTCDev/100)*(rR0+rM*(rTemp-rT0));
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>