<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.3">
  <POU Name="f_GetNTCNomR" Id="{e6e701a4-66eb-40e3-912f-285cdbde5e7f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION f_GetNTCNomR : real
VAR_INPUT
	rTemp: REAL;
	nProd: UINT;
END_VAR
VAR
	nI: INT;
	rT0, rT1, rR0, rR1, rM: REAL;
END_VAR
VAR CONSTANT
	rCorr: REAL := 1.1;
	NTC_Sensing_MinRT: ARRAY[0..1, 0..25] OF REAL := 
	[15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40,
	14966.9, 14299.6, 13665.8, 13063.7, 12491.4, 11947.3, 11430, 10937.9, 10469.8, 10024.2, 9600, 9188.1, 8796.1, 8423, 8067.6, 7729.2, 7406.8, 7099.6, 6806.7, 6527.5, 6261.3, 6007.2, 5764.9, 5533.6, 5312.7, 5101.9];
	NTC_GE_MinRT: ARRAY[0..1, 0..23] OF REAL := 
	[15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 38, 40,
	15133, 14457, 13815, 13206, 12626, 12075, 11552, 11053, 10579, 10128, 9700, 9279.9, 8883.4, 8506.1, 8146.8, 7804.7, 7478.7, 7168.1, 6872.1, 6589.9, 6320.7, 6064, 5585.4, 5149.3];
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[nI:=1;
(*IF nProd=0 THEN
	WHILE (NTC_Sensing_MinRT[0,nI]<rTemp) AND (nI<25) DO
		nI:=nI+1;
	END_WHILE
	rT0:=NTC_Sensing_MinRT[0,nI-1];
	rT1:=NTC_Sensing_MinRT[0,nI];
	rR0:=NTC_Sensing_MinRT[1,nI-1];
	rR1:=NTC_Sensing_MinRT[1,nI];
	rM:=(rR1-rR0)/(rT1-rT0);
	f_GetNTCMinR:=rR0+rM*(rTemp-rT0);
ELSE
	WHILE (NTC_GE_MinRT[0,nI]<rTemp) AND (nI<23) DO
		nI:=nI+1;
	END_WHILE
	rT0:=NTC_GE_MinRT[0,nI-1];
	rT1:=NTC_GE_MinRT[0,nI];
	rR0:=NTC_GE_MinRT[1,nI-1];
	rR1:=NTC_GE_MinRT[1,nI];
	rM:=(rR1-rR0)/(rT1-rT0);
	f_GetNTCMinR:=rR0+rM*(rTemp-rT0);	
END_IF*)
WHILE (GVL.NTC_Sensing_NomRT[0,nI]<rTemp) AND (nI<25) DO
	nI:=nI+1;
END_WHILE
rT0:=GVL.NTC_Sensing_NomRT[0,nI-1];
rT1:=GVL.NTC_Sensing_NomRT[0,nI];
rR0:=GVL.NTC_Sensing_NomRT[1,nI-1];
rR1:=GVL.NTC_Sensing_NomRT[1,nI];
rM:=(rR1-rR0)/(rT1-rT0);
f_GetNTCMinR:=(rR0+rM*(rTemp-rT0))/(1+GVL.rNTCDev/100);
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>